--- a/src/components/guess.css
+++ b/src/components/guess.css
@@ -34,3 +34,14 @@
 .guessGame-form :nth-child(2):hover{
     opacity: 1;
 }
+.btn{
+    background-color: rgb(69, 79, 181);
+    cursor: pointer;
+    opacity: 0.9;
+    color: white;
+    padding: 10px;
+    border: none;
+    transition: 0.2s all ease-in-out;
+    border-radius: 8px;
+    font-size: 1.4rem;
+}
